fix: update the docker file
